add new marketing page

--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -1,9 +1,9 @@
-<div class="promotion-title-icons">
-    <div class="promotion-title-icon publicity_static"></div>
-    <div class="promotion-title-icon_main"></div>
-    <div class="promotion-title-icon design-static"></div>
+<div class="title-icons">
+    <div class="title-icon publicity_static"></div>
+    <div class="title-icon_main page_promotion"></div>
+    <div class="title-icon design_static"></div>
 </div>
-<div class="promotion-title_text">Продвижение</div>
+<div class="title_text">Продвижение</div>
 
 <div class="promotion-body-block_1">
     <p>Это - комплекс мер, направленный на улучшение индексации сайта<br/>
