footer, publicity, desing, new banner

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -5,8 +5,8 @@
 
 <div class="main-navigation">
     <div class="main-navigation-item">
-        <a>
-            <img class="main-navigation-item_image promotion" alt="Продвижение в поисковых системах" src="/img/promotion.png">
+        <a href="<?= $this->url('page', array('action' => 'promotion')) ?>">
+            <img class="main-navigation-item_image promotion right-align" alt="Продвижение в поисковых системах" src="/img/promotion.png">
             <div class="caption right-align">
                 <h3>Продвижение</h3>
                 <p>В поисковых<br/> системах</p>
@@ -14,8 +14,8 @@
         </a>
     </div>
     <div class="main-navigation-item">
-        <a>
-            <img class="main-navigation-item_image design" alt="WEB Design" src="/img/design.png">
+        <a href="<?= $this->url('page', array('action' => 'design')) ?>">
+            <img class="main-navigation-item_image design right-align" alt="WEB Design" src="/img/design.png">
             <div class="caption right-align">
                 <h3>WEB Design</h3>
                 <p>Создание<br/> сайтов</p>
@@ -23,8 +23,8 @@
         </a>
     </div>
     <div class="main-navigation-item">
-        <a>
-            <img class="main-navigation-item_image marketing" alt="WEB маркетинг" src="/img/marketing.png">
+        <a href="<?= $this->url('page', array('action' => 'marketing')) ?>">
+            <img class="main-navigation-item_image marketing left-align" alt="WEB маркетинг" src="/img/marketing.png">
             <div class="caption left-align">
                 <h3>WEB маркетинг</h3>
                 <p>и управлние <br/> репутацией</p>
@@ -32,8 +32,8 @@
         </a>
     </div>
     <div class="main-navigation-item">
-        <a>
-            <img class="main-navigation-item_image publicity" alt="Реклама" src="/img/publicity.png">
+        <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
+            <img class="main-navigation-item_image publicity left-align" alt="Реклама" src="/img/publicity.png">
             <div class="caption left-align">
                 <h3>Реклама и PR</h3>
                 <p>В социальных <br/> сетях</p>
