--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -1,7 +1,11 @@
 <div class="title-icons">
-    <div class="title-icon design_static"></div>
+    <a href="<?= $this->url('page', array('action' => 'design')) ?>">
+        <div class="title-icon design_static"></div>
+    </a>
     <div class="title-icon_main page_marketing"></div>
-    <div class="title-icon publicity_static"></div>
+    <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
+        <div class="title-icon publicity_static"></div
+    </a>
 </div>
 <div class="title_text">WEB Маркетинг</div>
 
