--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -52,7 +52,7 @@
                 <div class="wrap-menu-items">
                     <div class="menu-item">
                         <h2>
-                            <a href="#">Продвижение</a>
+                            <a href="<?= $this->url('page', array('action' => 'promotion')) ?>">Продвижение</a>
                         </h2>
                         <br/>
                         <div class="menu-item_links">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="menu-item">
                         <h2>
-                            <a href="#">WEB Design</a>
+                            <a href="<?= $this->url('page', array('action' => 'design')) ?>">WEB Design</a>
                         </h2>
                         <br/>
                         <div class="menu-item_links">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="menu-item">
                         <h2>
-                            <a href="#">WEB Маркетинг</a>
+                            <a href="<?= $this->url('page', array('action' => 'marketing')) ?>">WEB Маркетинг</a>
                         </h2>
                         <br/>
                         <div class="menu-item_links">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="menu-item">
                         <h2>
-                            <a href="#">Реклама и PR</a>
+                            <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">Реклама и PR</a>
                         </h2>
                         <br/>
                         <div class="menu-item_links">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="menu-item">
                         <h2>
-                            <a href="#">Контакты</a>
+                            <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">Контакты</a>
                         </h2>
                         <br/>
                         <div class="menu-item_links">
@@ -105,9 +105,11 @@
                 <div class="content">
                     <?php echo $this->content; ?>
                 </div>
-            </div>    
+            </div>  
         </div>
-        <button class="contacts-button">Связаться с нами</button>
+        <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">
+            <button class="contacts-button">Связаться с нами</button>
+        </a>
         <footer>
             <div class="footer-social-icons">
                 <a class="social-icon twitter" href="#"></a>
